--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,33 @@
+/*
+ * MIT License
+ *
+ * Copyright (c) 2021 Greyp Bikes d.o.o.
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+
 plugins {
   id 'com.android.application'
   id 'kotlin-android'
   id 'kotlin-kapt'
+  id("dagger.hilt.android.plugin")
+  id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -18,8 +44,6 @@ android {
     properties.load(project.rootProject.file("credentials.properties").newDataInputStream())
     def hereAccessKeyId = properties['here.access.key.id']
     def hereAccessKeySecret = properties['here.access.key.secret']
-    def hereClientId = properties['here.client.id']
-    def hereUserId = properties['here.user.id']
 
     manifestPlaceholders["hereAccessKeyId"] = hereAccessKeyId
     manifestPlaceholders["hereAccessKeySecret"] = hereAccessKeySecret
@@ -51,9 +75,16 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.6.0'
   implementation 'androidx.appcompat:appcompat:1.3.1'
   implementation 'com.google.android.material:material:1.4.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
   implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+  implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+  implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+
+  //region Dagger Hilt
+  implementation("com.google.dagger:hilt-android:$hilt_version")
+  kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
+  //endregion
 
   //region Timber
   implementation "com.jakewharton.timber:timber:${rootProject.ext.timber_version}"
