--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
   ~ Copyright (c) 2021 Greyp Bikes d.o.o.
@@ -25,18 +24,17 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.greyp.android.demo">
-
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <application
+    android:name=".app.GreypApp"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
-    android:name=".app.GreypApp"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.Demo">
@@ -50,8 +48,14 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <meta-data android:name="com.here.sdk.access_key_id" android:value="${hereAccessKeyId}" />
-    <meta-data android:name="com.here.sdk.access_key_secret" android:value="${hereAccessKeySecret}" />
-  </application>
 
+    <meta-data
+      android:name="com.here.sdk.access_key_id"
+      android:value="${hereAccessKeyId}" />
+
+    <meta-data
+      android:name="com.here.sdk.access_key_secret"
+      android:value="${hereAccessKeySecret}" />
+    <service android:name=".services.LocationService" android:enabled="true"/>
+  </application>
 </manifest>
