--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,21 @@ android {
     dataBinding true
     viewBinding true
   }
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+    }
+  }
+}
+def getHereSdkArtefactName() {
+  def aarFile = fileTree(dir: 'libs', include: ['heresdk-*.aar']).first()
+  // Filename without extension is necessary.
+  return org.apache.commons.io.FilenameUtils.getBaseName(aarFile.name)
+}
+
+// Exclude HERE SDK's aar from unit test's dependencies.
+configurations.testImplementation {
+  exclude module: getHereSdkArtefactName()
 }
 
 dependencies {
@@ -91,7 +106,19 @@ dependencies {
   implementation "com.jakewharton.timber:timber:${rootProject.ext.timber_version}"
   //endregion
 
+  //region Affolestad MaterialDialogs
+  implementation "com.afollestad.material-dialogs:core:${rootProject.ext.material_dialogs_version}"
+  implementation "com.afollestad.material-dialogs:input:${rootProject.ext.material_dialogs_version}"
+  //endregion
+
+  // Keep in mind that the original HERE SDK aar must be excluded from
+  // the test dependency, see above.
+  testImplementation fileTree(dir: 'libs', include: ['*mock*.jar'])
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-core:3.1.0'
+
   testImplementation 'junit:junit:4.+'
+  testImplementation 'org.robolectric:robolectric:4.4'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
