--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ buildscript {
 ext {
   timber_version = "4.7.1"
   nav_version = "2.3.5"
+  material_dialogs_version = "3.3.0"
 }
 
 task clean(type: Delete) {
