--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,7 @@ dependencies {
   implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
   implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
   implementation 'com.google.android.gms:play-services-location:18.0.0'
+  implementation 'com.google.android.material:material:1.4.0'
 
   //region Dagger Hilt
   implementation("com.google.dagger:hilt-android:$hilt_version")
