--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ ext {
   timber_version = "4.7.1"
   nav_version = "2.3.5"
   material_dialogs_version = "3.3.0"
+  hilt_jetpack_version = "1.0.0"
 }
 
 task clean(type: Delete) {
