Refactored Presentation layer to have multiple viewmodels and remove unnecessary logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
       android:value="${hereAccessKeySecret}" />
 
     <service
-      android:name=".services.LocationService"
+      android:name="com.greyp.android.demo.ui.services.LocationService"
       android:enabled="true" />
   </application>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
