--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.Demo">
     <activity
-      android:name=".ui.main.MainActivity"
+      android:name="com.greyp.android.demo.ui.main.MainActivity"
       android:exported="true"
       android:label="@string/title_activity_main"
       android:theme="@style/Theme.Demo.NoActionBar">
